# metricq-source-example

./: Dockerfile  README.md  pyproject.toml  setup.cfg
metricq_source_example/: example_source.py  main.py
